# C-RoadMap

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: c-cpp.yml
math/: integer_greater.c  interest_calculator.c  radius.c  repetition_char.c
